# pure-borrow

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  cabal-bench.project  cabal.project  cabal.project.freeze  pure-borrow.cabal
.claude/: settings.json
.github/workflows/: artifact.yml  haskell.yml
app/: artifact-runner.hs  convert-qsort-bench-csv.hs  fft.hs  qsort.hs
bench/: fft.hs  qsort.hs
ci/configs/: ghc-9.10.2.project  ghc-9.10.3.project  ghc-9.12.2.project  ghc-9.12.4.project  ghc-9.14.1-head.project  ghc-9.14.1.project  ghc-9.8.4.project
dockerfiles/artifact/: Dockerfile  run.sh
doctests/: doctests.hs
internal-src/bench-suites/PureBorrow/Internal/Bench/: Fft.hs  QSort.hs
internal-src/demo-impl/PureBorrow/Demo/: Fft.hs  QSort.hs
internal-src/qsort-bench-suites/PureBorrow/Internal/Bench/: QSort.hs
internal-src/qsort-demo-impl/PureBorrow/Demo/: QSort.hs
scripts/: genplot.gnuplot
src/: Foo.hs
src/Control/Borrow/Pure/: Affine.hs  Lifetime.hs  Multiplicity.hs
src/Control/Borrow/Pure/Affine/: Internal.hs
src/Control/Borrow/Pure/Lifetime/: Internal.hs  Token.hs
src/Control/Borrow/Pure/Lifetime/Token/: Internal.hs
src/Control/Comonad/: Linear.hs
src/Control/Concurrent/DivideConquer/: Linear.hs
src/Control/Concurrent/DivideConquer/Linear/: Types.hs
src/Control/Concurrent/DivideConquer/Utils/: AtomicCounter.hs  QueuePool.hs  Semaphore.hs
src/Control/Concurrent/DivideConquer/Utils/AtomicCounter/: Linear.hs
src/Control/Concurrent/DivideConquer/Utils/BMQueue/: Linear.hs
src/Control/Concurrent/DivideConquer/Utils/MQueue/: Linear.hs
src/Control/Concurrent/DivideConquer/Utils/OnceChan/: Linear.hs
src/Control/Concurrent/DivideConquer/Utils/OnceChan/Linear/: Unlifted.hs
src/Control/Concurrent/DivideConquer/Utils/Unsafe/QueuePool/: Linear.hs
src/Control/Concurrent/Queue/: ChaseLev.hs
src/Control/Concurrent/STM/: TMDeque.hs  TMDequeRingBuffer.hs
src/Control/Functor/Linear/: Extra.hs
src/Control/Monad/Borrow/: Pure.hs
src/Control/Monad/Borrow/Pure/: Affine.hs  BO.hs  Borrows.hs  Clone.hs  Copyable.hs  Internal.hs  Lifetime.hs  Ref.hs  Unsafe.hs  Utils.hs  Var.hs
src/Control/Monad/Borrow/Pure/Affine/: Internal.hs  Unsafe.hs
src/Control/Monad/Borrow/Pure/BO/: Internal.hs  Unsafe.hs
src/Control/Monad/Borrow/Pure/Experimental/: Borrows.hs  Loop.hs  Reborrowable.hs
src/Control/Monad/Borrow/Pure/Lifetime/: Internal.hs  Token.hs
src/Control/Monad/Borrow/Pure/Lifetime/Token/: Internal.hs  Unsafe.hs
src/Control/Syntax/: DataFlow.hs
src/Data/Array/Mutable/Linear/: Token.hs  Witness.hs
src/Data/Array/Mutable/Unlifted/Linear/: Witness.hs
src/Data/Coerce/: Directed.hs
src/Data/Coerce/Directed/: Internal.hs  Unsafe.hs
src/Data/Comonad/: Linear.hs
src/Data/Functor/Linear/: Extra.hs
src/Data/MutVar/: Linear.hs
src/Data/MutVar/Linear/: Unlifted.hs
src/Data/OnceChan/: Linear.hs
src/Data/OnceChan/Linear/: Unlifted.hs
src/Data/Record/Linear/: Experimental.hs
src/Data/Record/Linear/Borrow/: Experimental.hs
src/Data/Record/Linear/Borrow/Experimental/: PatternMatch.hs  Split.hs
src/Data/Ref/: Linear.hs
src/Data/Ref/Linear/: Borrow.hs  Unlifted.hs
src/Data/Unique/: Linear.hs
src/Data/Var/: Linear.hs
src/Data/Var/Linear/: Unlifted.hs
src/Data/Vector/Mutable/Linear/: Borrow.hs
test/: Main.hs
test/Control/Borrow/Pure/: LifetimeSpec.hs
test/Control/Borrow/Pure/Lifetime/: TypingCases.hs
test/Control/Concurrent/DivideConquer/: LinearSpec.hs
test/Control/Monad/Borrow/Pure/: BOSpec.hs  LifetimeSpec.hs
test/Control/Monad/Borrow/Pure/Lifetime/: TypingCases.hs
test/Data/Vector/Mutable/Linear/: BorrowSpec.hs
workspace/: PERF-PLAN.md
