cabal-version: 3.4
name: pure-borrow
version: 0.1.0.0
synopsis: Pure realization of Rust-style borrows
description: Please see README.md.
license: BSD-3-Clause
license-file: LICENSE
author: Yusuke Matsushita
maintainer: ysk.m24t@gmail.com
copyright: Copyright (c) 2025, Yusuke Matsushita
category: Linear Haskell
build-type: Simple
homepage: https://github.com/SoftwareFoundationGroupAtKyotoU/pure-borrow
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/SoftwareFoundationGroupAtKyotoU/pure-borrow

common defaults
  default-language: GHC2021
  default-extensions: LinearTypes
  autogen-modules: Paths_pure_borrow
  other-modules: Paths_pure_borrow
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  build-depends:
    base >=4.17 && <5,
    linear-base >=0.5,

library
  import: defaults
  build-depends:
    containers,
    deepseq,
    linear-generics,
    stm,
    stm-chans,
    vector,

  hs-source-dirs: src
  -- cabal-gild: discover src --exclude src/**/Utils.hs --exclude src/**/Utils/**/*.hs
  exposed-modules:
    Control.Concurrent.DivideConquer.Linear
    Control.Monad.Borrow.Pure
    Control.Monad.Borrow.Pure.Affine
    Control.Monad.Borrow.Pure.Affine.Internal
    Control.Monad.Borrow.Pure.Internal
    Control.Monad.Borrow.Pure.Lifetime
    Control.Monad.Borrow.Pure.Lifetime.Internal
    Control.Monad.Borrow.Pure.Lifetime.Token
    Control.Monad.Borrow.Pure.Lifetime.Token.Internal
    Control.Monad.Borrow.Pure.Ref
    Control.Syntax.DataFlow
    Data.Coerce.Directed
    Data.Comonad.Linear
    Data.OnceChan.Linear
    Data.OnceChan.Linear.Unlifted
    Data.Ref.Linear
    Data.Ref.Linear.Unlifted
    Data.Unique.Linear
    Data.Vector.Mutable.Linear.Borrow

  -- cabal-gild: discover src --include src/**/Utils.hs --include src/**/Utils/**/*.hs
  other-modules:
    Control.Concurrent.DivideConquer.Utils.MQueue.Linear
    Control.Monad.Borrow.Pure.Utils

  build-tool-depends: cabal-gild:cabal-gild >=1.6.0.0
  build-depends:

test-suite pure-borrow-test
  import: defaults
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  -- cabal-gild: discover test --exclude=test/Main.hs
  other-modules:
    Control.Concurrent.DivideConquer.LinearSpec
    Control.Monad.Borrow.Pure.Lifetime.TypingCases
    Control.Monad.Borrow.Pure.LifetimeSpec
    Data.Vector.Mutable.Linear.BorrowSpec

  ghc-options:
    -O2
    -threaded

  build-tool-depends:
    tasty-discover:tasty-discover >=5.0.1

  build-depends:
    deepseq,
    falsify,
    inspection-testing,
    pure-borrow,
    tasty,
    tasty-discover,
    tasty-expected-failure,
    tasty-hunit,
    vector,

benchmark qsort-bench
  import: defaults
  type: exitcode-stdio-1.0
  main-is: qsort.hs
  hs-source-dirs: bench
  ghc-options:
    -threaded
    -rtsopts
    -O2
    "-with-rtsopts=-N1 --nonmoving-gc"

  build-depends:
    base >=4.7 && <5,
    deepseq,
    pure-borrow,
    random,
    tasty,
    tasty-bench,
    vector,
    vector-algorithms,

  default-language: Haskell2010

executable qsort
  import: defaults
  main-is: qsort.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.7 && <5,
    deepseq,
    optparse-applicative,
    pure-borrow,
    random,
    vector,
    vector-algorithms,

  default-language: Haskell2010

executable convert-qsort-bench-csv
  import: defaults
  main-is: convert-qsort-bench-csv.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.7 && <5,
    bytestring,
    cassava,
    deepseq,
    monoidal-containers,
    optparse-applicative,
    pure-borrow,
    random,
    text,
    unordered-containers,
    vector,
    vector-algorithms,

  default-language: Haskell2010
